exports[`minimal usage`] = `
<div
  className="form-group">
  <label
    className=""
    htmlFor="textInput1">
    First Name
  </label>
  <input
    aria-describedby={undefined}
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="textInput1"
    name="name"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="Foo Bar" />
</div>
`;

exports[`validation`] = `
<div
  className="form-group">
  <label
    className=""
    htmlFor="textInput2">
    Username
  </label>
  <input
    aria-describedby="undefined description-textInput2"
    aria-invalid={false}
    className="form-control"
    disabled={false}
    id="textInput2"
    name="username"
    onBlur={[Function]}
    onChange={[Function]}
    placeholder={undefined}
    required={false}
    type="text"
    value="" />
  <small
    className="form-text"
    id="description-textInput2">
    The unique name that identifies you throughout the site.
  </small>
</div>
`;
